--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,6 +1,6 @@
-$primary-color:#000000;
-$secondary-color:#997F52;
-$tertiary-color:#E4E4E4;
+$primary-color:#FDDC5C;
+$secondary-color:#000000;
+$tertiary-color:#ffffff;
 $grey:#2D2926;
 $grey-20:#B8B2AB;
 $white:#fff;
