--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -2,13 +2,23 @@ body.material .ocm-effect-wrap .container-wrap {
   overflow: hidden;
 }
 body, html, .testimonial_slider:not([data-style*=multiple_visible]) blockquote, blockquote {
+  font-family: "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
+  font-weight: 500;
+  line-height: 1.44;
 }
 p.kicker,
 .kicker p {
   color: $primary-color !important;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+.light {
+  p.kicker,
+  .kicker p {
+    color: $secondary-color !important;
+  }
 }
 .lg-text {
   font-size: 18px;
@@ -117,29 +127,17 @@ ul:last-child {
 .vc_row-fluid {
   .wpb_column {
     .wpb_text_column.wpb_content_element {
-      .wpb_wrapper {
-        a:not(.nectar-button){
-          position: relative;
-          display: inline;
-          text-decoration: none;
-          background-image: linear-gradient(#FDDC5C, #FDDC5C);
-          background-repeat: no-repeat;
-          background-size: 100% 2px;
-          background-position: left bottom;
-          animation: underlineShrink .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
-          &:hover {
-            animation: underlineGrow .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
-          }
-          &:after {
-            content: '';
-            position: absolute;
-            left:0;
-            bottom:0px;
-            right:0;
-            height: 1px;
-            background-color: #2D2926;
-            z-index: -1;
-          }
+      a:not(.nectar-button){
+        position: relative;
+        display: inline;
+        text-decoration: none;
+        background-image: linear-gradient(#FDDC5C, #FDDC5C);
+        background-repeat: no-repeat;
+        background-size: 100% 2px;
+        background-position: left bottom;
+        animation: underlineShrink .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
+        &:hover {
+          animation: underlineGrow .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
         }
       }
     }
@@ -149,18 +147,19 @@ ul:last-child {
   transition: all .45s cubic-bezier(.25,1,.33,1) !important;
 }
 /* BUTTON */
-body .col .nectar-button[data-color-override="false"].nectar-button {
+html body .col .nectar-button[data-color-override=false].nectar-button,
+html body .col .nectar-button[data-color-override="false"].nectar-button {
   border-radius: 0 !important;
   -webkit-border-radius: 0 !important;
-  color: $white !important;
-  padding: 18px 28px 16px !important;
+  padding: 16px 28px !important;
   line-height: 1;
+  font-size: 20px !important;
   vertical-align: baseline;
-  font-size: 17px;
   margin: 0 !important;
   text-align: center;
-  background-color: $primary-color;
+  color: $secondary-color !important;
   border: 2px solid $primary-color;
+  background-color: $primary-color !important;
   transition: all .45s cubic-bezier(.25,1,.33,1) !important;
   text-transform: capitalize;
   span {
@@ -176,9 +175,18 @@ body .col .nectar-button[data-color-override="false"].nectar-button {
     }
   }
   &:hover {
-    color: $primary-color !important;
     background-color: transparent !important;
+    color: $primary-color !important;
     opacity: 1;
+  }
+  &.see-through {
+    color: $tertiary-color !important;
+    border: 2px solid $tertiary-color !important;
+    background-color: $secondary-color !important;
+    &:hover {
+      background-color: $tertiary-color !important;
+      color: $secondary-color !important;
+    }
   }
   @include mobile {
     &.hide-mobile {
@@ -194,27 +202,6 @@ body .col .nectar-button[data-color-override="false"].nectar-button {
     font-size: 16px;
     &.hide-desktop {
       display: none !important;
-    }
-  }
-  &.see-through {
-    padding: 0 !important;
-    margin-top: -5px !important;
-    line-height: 1;
-    border: none;
-  }
-  &.has-icon {
-    display: inline-flex;
-    gap: 8px;
-    span {
-      transform: none !important;
-    }
-    i {
-      position: relative !important;
-      right: auto;
-      transform: none !important;
-      &:before {
-        font-weight: 900;
-      }
     }
   }
   ~ .nectar-button {
@@ -463,7 +450,6 @@ body[data-form-submit=regular] .container-wrap .gform_wrapper.gform-theme--found
     display: none;
   }
   .top_label .gfield_label {
-    font-family: "Eina01-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 17px;
     margin-top: 0 !important;
     font-weight: 400;
@@ -476,7 +462,6 @@ body[data-form-submit=regular] .container-wrap .gform_wrapper.gform-theme--found
   }
   input[type=date], input[type=email], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text]:not([name="s"]), input[type=url], select {
     block-size: auto !important;
-    font-family: "Eina01-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
     border-radius: 0;
     padding-top: 0;
     padding-left: 0;
@@ -504,7 +489,6 @@ body[data-form-submit=regular] .container-wrap .gform_wrapper.gform-theme--found
   textarea {
     box-sizing: border-box !important;
     resize: vertical!important;
-    font-family: "Eina01-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
     border-radius: 0;
     padding-top: 0;
     padding-left: 0;
@@ -538,7 +522,6 @@ body[data-form-submit=regular] .container-wrap .gform_wrapper.gform-theme--found
     button[type=button],
     button[type=submit],
     input[type=submit] {
-      font-family: "Eina01-Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
       border-radius: 0 !important;
       -webkit-border-radius: 0 !important;
       color: $white !important;
