--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -24,6 +24,46 @@ body {
           width: 22px !important;
         }
       }
+      .col.span_3 {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 12px;
+        margin-right: 12px;
+        &::after {
+          display: none;
+        }
+        .header-content{
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          line-height: 1.3;
+          color: $primary-color;
+          span {
+            font-size: 14px;
+          }
+          a {
+            color: $tertiary-color;
+            text-decoration: underline;
+            transition: all .45s cubic-bezier(.25,1,.33,1) !important;
+            &:hover {
+              text-decoration: none;
+            }
+          }
+        }
+        @include xl_desktop {
+          gap: 24px;
+        }
+        #logo {
+          img {
+            max-height: 50px;
+            @include xl_desktop {
+              max-height: 52px;
+            }
+          }
+        }
+      }
       .col.span_9 {
         nav {
           > ul {
@@ -38,23 +78,37 @@ body {
                 transition: all 0.45s ease;
                 span:after {
                   max-width: 40%;
-                  border-color: $secondary-color !important;
+                  border-color: $primary-color !important;
                 }
               }
             }
             > li.header-btn {
-              a {
-                font-size: 16px;
-                white-space: nowrap;
-                padding: 15px 26px 13px;
-                color: $primary-color !important;
-                border: 2px solid $white;
-                background-color: $white !important;
-                transition: all 0.45s ease;
-                &:hover {
-                  background-color: transparent !important;
-                  color: $white !important;
+              &:not(.see-through) {
+                a {
+                  color: $secondary-color !important;
+                  border: 2px solid $primary-color;
+                  background-color: $primary-color !important;
+                  &:hover {
+                    background-color: transparent !important;
+                    color: $primary-color !important;
+                  }
                 }
+              }
+              &.see-through {
+                a {
+                  color: $tertiary-color;
+                  border: 2px solid $tertiary-color;
+                  background-color: $secondary-color !important;
+                  &:hover {
+                    background-color: $tertiary-color !important;
+                    color: $secondary-color !important;
+                  }
+                }
+              }
+              a {
+                white-space: nowrap;
+                padding: 16px 28px;
+                transition: all .45s cubic-bezier(.25,1,.33,1) !important;
                 span:after {
                   display: none;
                 }
@@ -94,40 +148,39 @@ body {
                   opacity: 1;
                   letter-spacing: normal;
                 }
-                &.menu-item-has-icon {
+              }
+              > li.header-btn {
+                display: block;
+                margin: 4px 0 26px !important;
+                &:not(.see-through) {
                   a {
-                    flex-direction: row-reverse;
-                    align-items: flex-start;
-                    justify-content: flex-end;
-                    gap: 6px;
-                    .nectar-menu-icon-img {
-                      margin: 0;
-                      width: 12px;
-                      height: 12px;
-                      aspect-ratio: 1/1;
+                    color: $secondary-color !important;
+                    border: 2px solid $primary-color;
+                    background-color: $primary-color !important;
+                    &:hover {
+                      background-color: transparent !important;
+                      color: $primary-color !important;
                     }
                   }
                 }
-                &:last-child {
-                  display: none;
-                }
-                &.header-btn {
+                &.see-through {
                   a {
-                    display: inline-flex;
-                    margin-top: 22px;
-                    white-space: nowrap;
-                    padding: 15px 26px 13px;
-                    color: $primary-color !important;
-                    border: 2px solid $white;
-                    background-color: $white !important;
-                    transition: all 0.45s ease;
+                    color: $tertiary-color;
+                    border: 2px solid $tertiary-color;
+                    background-color: $secondary-color !important;
                     &:hover {
-                      background-color: transparent !important;
-                      color: $white !important;
+                      background-color: $tertiary-color !important;
+                      color: $secondary-color !important;
                     }
-                    span:after {
-                      display: none;
-                    }
+                  }
+                }
+                a {
+                  display: inline-block;
+                  white-space: nowrap;
+                  padding: 16px 28px;
+                  transition: all 0.45s ease;
+                  span:after {
+                    display: none;
                   }
                 }
               }
