--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -2,9 +2,8 @@ body.material .ocm-effect-wrap .container-wrap {
   overflow: hidden;
 }
 body, html, .testimonial_slider:not([data-style*=multiple_visible]) blockquote, blockquote {
-  font-family: "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Futura", "futura-pt", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 500;
   line-height: 1.44;
 }
 p.kicker,
@@ -20,6 +19,28 @@ p.kicker,
     color: $secondary-color !important;
   }
 }
+.fw-400 {
+  font-weight: 400;
+  font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  @include mobile {
+    &-m {
+      font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-weight: 400;
+    }
+  }
+  @include tablet {
+    &-t {
+      font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-weight: 400;
+    }
+  }
+  @include desktop {
+    &-d {
+      font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-weight: 400;
+    }
+  }
+}
 .lg-text {
   font-size: 18px;
 }
@@ -29,21 +50,16 @@ p.kicker,
 .sm-text {
   font-size: 14px;
 }
-.bold, b, strong {
-}
-h1, .heading-h1 {
-  font-size: 46px;
+body h1, .heading-h1 {
+  font-size: 48px;
   @include tablet {
-    font-size: 52px;
-  }
-  @include sm_desktop {
-    font-size: 60px;
-  }
-  @include lg_desktop {
     font-size: 64px;
   }
+  @include desktop {
+    font-size: 86px;
+  }
 }
-h2, .heading-h2,
+body h2, .heading-h2,
 .h2 h3 {
   font-size: 36px;
   @include mobile {
@@ -57,17 +73,14 @@ h2, .heading-h2,
       display: none;
     }
   }
-  @include sm_desktop {
-    font-size:42px;
-  }
-  @include lg_desktop {
+  @include desktop {
     font-size:46px;
   }
 }
 .toggle>h3.toggle-title a,
 .heading-h3,
-h3 {
-  font-size: 24px !important;
+body h3 {
+  font-size: 36px !important;
   @include mobile {
     br {
       display: none;
@@ -78,22 +91,19 @@ h3 {
       display: none;
     }
   }
-  @include desktop {
-    font-size:32px !important;
-  }
 }
 .heading-h4,
-h4 {
+body h4 {
   font-size: 24px;
 }
 
-h5, .heading-5 {
+body h5, .heading-5 {
   font-size:18px;
   @include tablet_up {
     font-size:20px;
   }
 }
-h6, .heading-6 {
+body h6, .heading-6 {
   font-size:16px;
   @include tablet_up {
     font-size:18px;
@@ -126,18 +136,20 @@ ul:last-child {
 }
 .vc_row-fluid {
   .wpb_column {
-    .wpb_text_column.wpb_content_element {
-      a:not(.nectar-button){
-        position: relative;
-        display: inline;
-        text-decoration: none;
-        background-image: linear-gradient(#FDDC5C, #FDDC5C);
-        background-repeat: no-repeat;
-        background-size: 100% 2px;
-        background-position: left bottom;
-        animation: underlineShrink .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
-        &:hover {
-          animation: underlineGrow .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
+    .vc_column-inner {
+      .wpb_text_column.wpb_content_element {
+        a:not(.nectar-button){
+          position: relative;
+          display: inline;
+          text-decoration: none;
+          background-image: linear-gradient(#FDDC5C, #FDDC5C);
+          background-repeat: no-repeat;
+          background-size: 100% 2px;
+          background-position: left bottom;
+          animation: underlineShrink .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
+          &:hover {
+            animation: underlineGrow .3s cubic-bezier(0.25, 0, 0.4, 1) forwards;
+          }
         }
       }
     }
@@ -169,10 +181,8 @@ html body .col .nectar-button[data-color-override="false"].nectar-button {
   &.full-width{
     width: 100%;
   }
-  @include mobile {
-    &.full-width-m {
-      width: 100%;
-    }
+  @include sm_mobile {
+    width: 100%;
   }
   &:hover {
     background-color: transparent !important;
@@ -182,7 +192,7 @@ html body .col .nectar-button[data-color-override="false"].nectar-button {
   &.see-through {
     color: $tertiary-color !important;
     border: 2px solid $tertiary-color !important;
-    background-color: $secondary-color !important;
+    background-color: transparent !important;
     &:hover {
       background-color: $tertiary-color !important;
       color: $secondary-color !important;
@@ -199,14 +209,22 @@ html body .col .nectar-button[data-color-override="false"].nectar-button {
     }
   }
   @include desktop {
-    font-size: 16px;
     &.hide-desktop {
       display: none !important;
     }
   }
   ~ .nectar-button {
+    @include mobile {
+      margin: 0 0 0 12px !important;
+    }
+    @include sm_mobile {
+      margin: 12px 0 0 0 !important;
+    }
+    @include tablet {
+      margin: 0 0 0 12px !important;
+    }
     @include desktop {
-      margin: 10px 0 0 24px!important;
+      margin: 0 0 0 16px !important;
     }
   }
 }
@@ -230,7 +248,6 @@ html body .col .nectar-button[data-color-override="false"].nectar-button {
     }
   }
 }
-
 .row .col .img-with-aniamtion-wrap img.img-with-animation.nectar-lazy:not([srcset]).image-width-full,
 .img-with-aniamtion-wrap[data-border-radius="15px"] img {
   width: 100%;
@@ -239,54 +256,18 @@ html body .col .nectar-button[data-color-override="false"].nectar-button {
 .span_12.light .wpb_text_column a:not(:hover) {
   opacity: 1 !important;
 }
-/* SET DEFAULT ROW PADDING */
-/* container left and right padding fix */
-// html body .full-width-content.vc_row-fluid.no-padding .wpb_column > div,
-
-.full-width-content > .row_col_wrap_12,
-.container {
-  @include mobile {
-    max-width: 100%;
-    padding-left: 22px !important;
-    padding-right: 22px !important;
+body {
+  #header-outer[data-full-width=true] {
+    header {
+      >.container {
+        @include tablet_down {
+          padding: 0 15px;
+        }
+      }
+    }
   }
-  @include tablet {
-    max-width: 100%;
-    padding-left: 32px !important;
-    padding-right: 32px !important;
-  }
-  @include desktop {
-    padding-left: 62px !important;
-    padding-right: 62px !important;
-  }
-  @include lg_desktop {
-    padding-left: 96px !important;
-    padding-right: 96px !important;
-  }
-}
-header>.container {
-  @include mobile {
-    max-width: 100%;
-    padding-left: 22px !important;
-    padding-right: 22px !important;
-  }
-  @include tablet {
-    max-width: 100%;
-    padding-left: 32px !important;
-    padding-right: 32px !important;
-  }
-  @include desktop {
-    padding-left: 12px !important;
-    padding-right: 12px !important;
-  }
-  @include lg_desktop {
-    padding-left: 48px !important;
-    padding-right: 48px !important;
-  }
-
 }
 /* padding for main rows */
-body.page-id-691 .container-wrap,
 body.privacy-policy .container-wrap,
 .vc_row .row_col_wrap_12 {
   padding: 40px 0;
@@ -297,7 +278,6 @@ body.privacy-policy .container-wrap,
     padding: 96px 0;
   }
 }
-
 /* overwriting the default row padding with custom classes */
 @include mobile {
   .no-pt-m .row_col_wrap_12 {
@@ -370,7 +350,6 @@ body.privacy-policy .container-wrap,
 .no-padding-bottom .row_col_wrap_12 {
   padding-bottom: 0 !important;
 }
-
 .wpb_column.no-margin:not([class*=vc_col-xs]),
 .no-margin,
 .no-margin .wpb_wrapper {
