--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -65,4 +65,107 @@
       background: linear-gradient(270deg, #000 9.74%, rgba(255, 255, 255, 0.00) 95.9%);
     }
   }
+  &__pricing-section {
+    .row_col_wrap_12 {
+      justify-content: center;
+      .pricing-box {
+        max-width: 404px;
+        @include desktop {
+          max-width: 426px;
+          margin-left: 15px !important;
+          margin-right: 15px !important;
+        }
+        .iwithtext {
+          .iwt-icon {
+            width: 24px;
+            height: 24px;
+            aspect-ratio: 1/1;
+            margin-bottom: 0;
+          }
+          .iwt-text {
+            padding-left: 30px;
+          }
+          margin-bottom: 12px;
+        }
+        .nectar-button[data-color-override=false].nectar-button {
+          margin-top: 12px !important;
+          margin-bottom: 12px !important;
+          width: 100%;
+        }
+      }
+      .price-box {
+        &__popular {
+          position: absolute;
+          inset: auto -1px 100%;
+          background-color: $primary-color;
+          display: flex;
+          padding: 6px 28px;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          align-self: stretch;
+          color: $secondary-color;
+          font-family: 'Anton';
+          font-size: 16px;
+          font-weight: 400;
+          margin-bottom: 0;
+        }
+        &__highlight {
+          border: 1px solid $primary-color;
+          background: #191609;
+          padding: 6px 12px;
+          font-size: 14px;
+          line-height: 2.14;
+          color: $primary-color;
+        }
+        &__title {
+          margin-bottom: 32px !important;
+          p {
+            color: $primary-color;
+            margin-top: -2px;
+          }
+        }
+        &__price {
+          margin-bottom: 12px !important;
+          color: $primary-color;
+          font-family: 'Oswald';
+          font-size: 36px;
+          font-weight: 500;
+          line-height: 1.27;
+          text-transform: uppercase;
+          @include desktop {
+            font-size: 46px;
+            line-height: 1;
+          }
+          span {
+            color: $tertiary-color;
+            font-size: 24px;
+            line-height: 46px;
+            @include desktop {
+              font-size: 32px;
+              line-height: 46px;
+            }
+          }
+        }
+        &__day {
+          color: #E0E0E0;
+        }
+        &__disclaimer-text {
+          color: #E0E0E0;
+          text-align: center;
+          font-size: 12px;
+          line-height: 1.83;
+        }
+      }
+      .pricing-box-cta {
+        max-width: 404px;
+        @include tablet {
+          max-width: 808px;
+        }
+        @include desktop {
+          max-width: 882.5px;
+        }
+      }
+    }
+  }
 }
