wip: actioning first rond of qa

--- a/assets/scss/elements/sthc-amenities-carousel.scss
+++ b/assets/scss/elements/sthc-amenities-carousel.scss
@@ -202,7 +202,10 @@
   }
 
   &__body {
-    margin-bottom: 24px
+    margin-bottom: 24px;
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   &__link {
