--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -397,7 +397,7 @@
         border-bottom: none;
         .toggle-title {
           a {
-            color: $primary-color;
+            color: $tertiary-color;
             padding-top: 24px;
             padding-bottom: 24px;
           }
@@ -407,7 +407,7 @@
               top: 11px;
               left: 0;
               margin-top: 0;
-              background-color: $white;
+              background-color: $tertiary-color;
             }
             margin-top: - 12px;
             border: none;
@@ -418,7 +418,20 @@
               top: 0;
               left: 11px;
               margin-left: 0;
-              background-color: $white;
+              background-color: $tertiary-color;
+            }
+          }
+        }
+        &.open {
+          .toggle-title {
+            a {
+              color: $primary-color;
+            }
+            i {
+              &::before,
+              &::after {
+                background-color: $primary-color;
+              }
             }
           }
         }
