build out book a free tour page

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -430,84 +430,48 @@ body .gform_wrapper,
 body[data-form-submit=regular] .gform_wrapper,
 body[data-form-submit=regular] .container-wrap .gform_wrapper.gform-theme--foundation {
   .gform_fields {
-    gap: 32px;
-    @include mobile {
-      display: flex;
-      flex-direction: column;
-    }
+    margin-top: 24px !important;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
   }
   margin-bottom: 0;
   .gform_heading {
     display: none;
   }
   .top_label .gfield_label {
-    font-size: 17px;
     margin-top: 0 !important;
-    font-weight: 400;
-    color: $primary-color !important;
+    color: $tertiary-color !important;
+    font-family: 'Futura';
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: capitalize !important;
     .gfield_required {
-      color: #4B4B4B !important;
-      font-size: 17px;
+      color: $primary-color !important;
       font-style: normal;
     }
   }
   input[type=date], input[type=email], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text]:not([name="s"]), input[type=url], select {
     block-size: auto !important;
     border-radius: 0;
-    padding-top: 0;
-    padding-left: 0;
+    padding: 16px !important;
+    border: 1px solid #262626 !important;
+    background-color: transparent !important;
     border: none;
-    font-size: 18px;
-    line-height: 1.44;
-    border-bottom: 1px solid #000;
+    color: $tertiary-color !important;
     &:focus {
       box-shadow: none;
-      border-bottom: 2px solid #000;
-      border-color: $secondary-color
-    }
-  }
-  select {
-    color: #474747 !important;
-    &.has-value {
-      color: $secondary-color !important;
-    }
-    appearance: none;
-    background: url("data:image/svg+xml;utf8,\
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 6' width='12'>\
-<path d='M1 1 L5 5 L9 1' stroke='black' fill='none' stroke-width='2' stroke-linecap='round'/>\
-</svg>") no-repeat right 16px top;
-  }
-  textarea {
-    box-sizing: border-box !important;
-    resize: vertical!important;
-    border-radius: 0;
-    padding-top: 0;
-    padding-left: 0;
-    border: none;
-    font-size: 18px;
-    line-height: 1.44;
-    border-bottom: 1px solid #000;
-    @include mobile {
-      &.small {
-        height: 118px !important;
-      }
-    }
-    &:focus {
-      box-shadow: none;
-      border-bottom: 2px solid #000;
-      border-color: $secondary-color
     }
   }
   ::placeholder {
-    color: #4b4b4b !important;
+    color: #E0E0E0 !important;
     opacity: 1;
   }
 
   .gform_footer {
     width: 100%;
-    @include desktop {
-      padding-top: 40px;
-    }
+    margin-top: 48px !important;
+    padding-top: 0;
     padding-bottom: 0;
     input:is([type=submit]),
     button[type=button],
@@ -515,23 +479,24 @@ body[data-form-submit=regular] .container-wrap .gform_wrapper.gform-theme--found
     input[type=submit] {
       border-radius: 0 !important;
       -webkit-border-radius: 0 !important;
-      color: $white !important;
-      padding: 18px 28px 16px !important;
+      padding: 16px 28px !important;
       line-height: 1;
+      font-size: 20px !important;
       vertical-align: baseline;
-      font-size: 16px;
       margin: 0 !important;
       text-align: center;
-      background-color: $primary-color;
+      color: $secondary-color !important;
       border: 2px solid $primary-color;
+      background-color: $primary-color !important;
       transition: all .45s cubic-bezier(.25,1,.33,1) !important;
       text-transform: capitalize;
-      @include desktop {
-        padding: 18px 28px 16px !important;
+      span {
+        display: inline-block;
+        vertical-align: baseline;
       }
       &:hover {
-        color: $primary-color !important;
         background-color: transparent !important;
+        color: $primary-color !important;
         opacity: 1;
       }
     }
