--- a/assets/scss/pages/thank-you.scss
+++ b/assets/scss/pages/thank-you.scss
@@ -1,2 +1,26 @@
 @import '../variables';
 @import '../mixin';
+.thank-you {
+  &__hero {
+    .row_col_wrap_12 {
+      .vc_column-inner {
+        h1 {
+          font-size: 36px !important;
+          line-height: 1.08 !important;
+          @include tablet {
+            font-size:38px !important;
+          }
+          @include desktop {
+            font-size:46px !important;
+          }
+        }
+        .hover-wrap  {
+          box-shadow: -12px 12px 0 0 $primary-color !important;
+          img {
+            width: 100%
+          }
+        }
+      }
+    }
+  }
+}
