--- a/assets/scss/pages/book-a-free-tour.scss
+++ b/assets/scss/pages/book-a-free-tour.scss
@@ -14,7 +14,7 @@
             font-size:46px !important;
           }
         }
-        .gform_body {
+        .gform_wrapper {
           max-width: 355px;
         }
         .hover-wrap  {
