--- a/assets/scss/elements/sthc-amenities-carousel.scss
+++ b/assets/scss/elements/sthc-amenities-carousel.scss
@@ -230,7 +230,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 36.78%, rgba(0, 0, 0, 0.60) 71.83%), linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%);
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 36.78%, rgba(0, 0, 0, 0.60) 71.83%);
       pointer-events: none;
       @include mobile {
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.80) 9.86%, rgba(0, 0, 0, 0.00) 33.11%), linear-gradient(180deg, rgba(0, 0, 0, 0.00) 48.86%, rgba(0, 0, 0, 0.80) 73.2%);
